# ScreenSolve

./: .gitignore  README.md  pyproject.toml  quickshot.toml
scripts/: start_quickshot.bat  start_quickshot.ps1
src/quickshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quickshot/api/: cli.py
src/quickshot/domain/: answer_rules.py  models.py  screenshot_service.py
src/quickshot/infra/: capture.py  clipboard.py  config.py  glm_client.py  hotkey.py  ocr.py
tests/: test_answer_rules.py  test_config.py  test_screenshot_service.py
